compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__hover__hover_contextual_type_annotation_unqualified.snap
---
source: compiler-core/src/language_server/tests/hover.rs
expression: "\nimport wibble/wobble.{type Wibble}\n\nfn main(wibble: Wibble) {\n  wibble\n}\n"
---
import wibble/wobble.{type Wibble}

fn main(wibble: Wibble) {
                ↑▔▔▔▔▔   
  wibble
}


----- Hover content -----
Scalar(
    String(
        "```gleam\nwobble.Wibble\n```\n",
    ),
)
