compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__hover__hover_contextual_type_annotation_unqualified_aliased.snap
---
source: compiler-core/src/language_server/tests/hover.rs
expression: "\nimport wibble/wobble.{type Wibble as Wubble}\n\nfn main(wibble: Wubble) {\n  wibble\n}\n"
---
import wibble/wobble.{type Wibble as Wubble}

fn main(wibble: Wubble) {
                ↑▔▔▔▔▔   
  wibble
}


----- Hover content -----
Scalar(
    String(
        "```gleam\nwobble.Wibble\n```\n",
    ),
)
