compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__hover__hover_on_pipe_with_invalid_step_3.snap
---
source: compiler-core/src/language_server/tests/hover.rs
expression: "\npub fn main() {\n  [1, 2, 3]\n  |> map(wibble)\n  |> filter(fn(value) { value })\n}\n\nfn map(list: List(a), fun: fn(a) -> b) -> List(b) {}\nfn filter(list: List(a), fun: fn(a) -> Bool) -> List(a) {}\n"
---
pub fn main() {
  [1, 2, 3]
  |> map(wibble)
         ↑▔▔▔▔▔ 
  |> filter(fn(value) { value })
}

fn map(list: List(a), fun: fn(a) -> b) -> List(b) {}
fn filter(list: List(a), fun: fn(a) -> Bool) -> List(a) {}


----- Hover content -----
Scalar(
    String(
        "```gleam\nfn(Int) -> Bool\n```\n",
    ),
)
